# GLNative

./: C++ 笔记  build.gradle  gradle.properties  native-lib.cpp  opengl 笔记  settings.gradle
MyDanMu/src/androidTest/java/com/kwai/video/danmuimpl/: ExampleInstrumentedTest.java
MyDanMu/src/main/: AndroidManifest.xml
MyDanMu/src/main/java/com/syy/video/danmu/: DM.java  Direction.java  LogUtil.java  Util.java
MyDanMu/src/main/java/com/syy/video/danmu/bean/: DMBaseModel.java
MyDanMu/src/main/java/com/syy/video/danmu/listener/: OnAddBrrageListener.java  ViewCreator.java
MyDanMu/src/main/java/com/syy/video/danmu/proxy/: DrawThread.java  SurfaceControlProxy.java  SurfaceProxy.java
MyDanMu/src/main/java/com/syy/video/danmu/widget/: BrrageSurfaceView.java  BrrageTextureView.java
MyDanMu/src/test/java/com/kwai/video/danmuimpl/: ExampleUnitTest.java
app/: .gitignore  CMakeLists.txt  build.gradle  git.gradle
app/src/androidTest/java/com/kwai/video/uikit/anative/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/sunyeyu/video/uikit/anative/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/calljava/: CallJava.cpp  CallJava.h
app/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h
app/src/main/cpp/ffmpeg/: AudioPlayer.cpp  AudioPlayer.h  FFmpeg.cpp  FFmpeg.h  PlayStatus.cpp  PlayStatus.h  StreamQueue.cpp  StreamQueue.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/cpp/filter/: FilterOne.cpp  FilterOne.h  FilterYuv.cpp  FilterYuv.h  WlFilterTwo.cpp  WlFilterTwo.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/cpp/log/: AndroidLog.h
app/src/main/cpp/matrix/: MatrixUtil.h
app/src/main/cpp/opengl/: BaseRender.cpp  BaseRender.h  FilterOne.h  Opengl.cpp  Opengl.h
app/src/main/cpp/shader/: BlackFilterShader.h  ShaderUtil.h
app/src/main/cpp/vbo/: CameraRender.cpp  CameraRender.h  FboRender.cpp  FboRender.h  FilterVboYuv.cpp  FilterVboYuv.h  MediaCodecRender.cpp  MediaCodecRender.h
app/src/main/java/com/kwai/video/uikit/anative/: MainActivity.kt  YuvActivity.kt
app/src/main/java/com/kwai/video/uikit/opengl/: NativeOpengl.java  VideoSupportUitl.java  WlSurfaceView.java
app/src/main/java/com/sunyeyu/video/uikit/anative/: CameraActivity.kt  MainActivity.kt  PlayerActivity.kt  SplashActivity.kt  YuvActivity.kt
app/src/main/java/com/sunyeyu/video/uikit/camera/: CameraUtils.java
app/src/main/java/com/sunyeyu/video/uikit/opengl/: MyTextureView.java  NativeOpengl.java  VideoSupportUitl.java  WlSurfaceView.java
app/src/main/java/com/sunyeyu/video/uikit/util/: DnsUitl.kt  LogUtils.kt  MyClickListener.java  TimeUtil.kt
app/src/main/java/com/sunyeyu/video/uikit/widget/: AutoScaleTextureView.java  CustomSeekBar.java  MyTextureView.java  PlayerRelativeLayout.java
app/src/main/res/drawable/: item_seek.xml  item_thumb.xml  oval_circle.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_splash.xml  activity_yuv.xml  barrage.xml  layout_custom_seekbar.xml  layout_play.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/kwai/video/uikit/anative/: ExampleUnitTest.kt
app/src/test/java/com/sunyeyu/video/uikit/anative/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
task/: build.gradle  build_allinone_sdk.sh  compile_protobuf_java.sh  git.gradle  task.gradle  upload.gradle
